# fine_tuning_bt_tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: sweep_config.yaml
convert_model_to_gguf/: Modelfile  merge_model.py
data/: behavior_trees_descriptions.json  domotic_dataset.json  domotic_dataset_v2.json  domotic_tools.json  system_prompt.txt  system_prompt_domotic.jinja  tool_descriptions.json  train_dataset.json
notebooks/: try_adapters.ipynb
templates/: functiongemma.jinja  lfm2.5.jinja  mistral.jinja  qwen3.5.jinja  qwen3.jinja
training/: .env.example  __init__.py  data_loader.py  eval.py  fine_tuning.py
