[project]
name = "fine-tuning-tool-calling"
version = "0.2.0"
description = "Fine-tuning LLMs for structured tool calling with Unsloth and LoRA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unsloth>=2025.3.19",
    "torch>=2.10.0",
    "transformers>=4.51.0",
    "trl>=0.18.0",
    "peft>=0.15.0",
    "datasets>=3.6.0",
    "wandb>=0.19.0",
    "python-dotenv>=1.1.0",
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
