[project]
name = "fine-tuning-tool-calling"
version = "0.2.0"
description = "Fine-tuning LLMs for structured tool calling with Unsloth and LoRA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unsloth>=2026.4.4",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.24.0",
    "peft>=0.18.1",
    "datasets>=4.2.0",
    "wandb>=0.24.1",
    "python-dotenv>=1.1.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.48.1",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
